components/Timeline/Timeline.module.scss
@use '@/scss/variables.scss' as var;

.mainTimeline {
    font-size: 14px;
    width: 100%;
    margin: 30px auto;
    line-height: 1.5em;
    position: relative;
    transition: all 0.3s ease;
}
.mainTimeline,
.mainTimeline *,
.mainTimeline *::before,
.mainTimeline *::after {
    box-sizing: border-box;
}

.mainTimeline::before {
    content: '';
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    height: 100%;
    width: 3px;
    background-color: var.$timeline-primary;
}

.mainTimeline .timelineItem {
    position: relative;
    margin-bottom: 30px;
}

.mainTimeline .timelineItem .timelineIcon {
    height: 25px;
    aspect-ratio: 1/1;
    position: absolute;
    top: 0;
    left: 50%;
    rotate: 45deg;
    transform: translateX(-50%) translateY(20%);
    background-color: var.$timeline-primary;
    border-radius: 25%;
    margin-left: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
}
.mainTimeline .timelineItem .timelineIcon i {
    font-size: 16px;
    rotate: -45deg;
}

.mainTimeline .timelineItem .timelineContent {
    width: 47%;
    position: relative;
}

.mainTimeline .timelineItem .timelineContent img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.mainTimeline .timelineItem:nth-child(even) .timelineContent {
    float: right;
}

.mainTimeline .timelineItem::after,
.mainTimeline .timelineItem::before {
    content: '';
    display: block;
    clear: both;
}

@media screen and (max-width: 768px) {
    .mainTimeline {
        margin: 20px 1px;
        padding: 0;
    }

    .mainTimeline::before {
        left: 0;
    }

    .mainTimeline .timelineItem .timelineIcon {
        left: 0;
    }
    
    .mainTimeline .timelineItem .timelineContent {
        width: 90%;
        float: right;
    }
}

